# Astrum

./: .gitattributes  .gitignore  .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  Voxel.fs  Voxel.vs  Wireframe.fs  Wireframe.vs  chunk.cpp  chunk.hpp  main.cpp  octree.cpp  octree.hpp
common/: controls.cpp  controls.hpp
reference/Desert/: Desert.bio
res/shaders/: GasGiant.fp  GasGiant.fs  GasGiant.vp  GasGiant.vs  GasGiantBands.frag  GasGiantFlow.frag  GasGiantTexture.frag  GasTexture.fp  GasTexture.vp  NewGasGiant.frag  NewGasGiantNT.frag  Simple.vp  SkyBox.fp  SkyBox.vp  SkyBox2.fp  StarTexture.fp  StarTexture.vp  Voxel.fs  Wireframe.fs  Wireframe.vs
src/: engine.cpp  engine.hpp  entity.hpp  main.cpp  system.hpp  tags
src/common/: controls.cpp  controls.hpp  shader.cpp  shader.hpp
src/components/: component.hpp  mesh.hpp  player.hpp  transform.hpp
src/dc/: density.cpp  density.hpp  octree.cpp  octree.hpp
src/systems/: ChunkManager.cpp  ChunkManager.hpp  chunk.cpp  chunk.hpp  controls.cpp  controls.hpp  render.cpp  render.hpp  system.hpp  terrain.cpp  terrain.hpp
tool/Apollo/: index.html
tool/Apollo/css/: node.css  styles.css
tool/Apollo/js/: background.js  color.js  node.js
tool/Apollo/js/jquery-ui-1.12.0.custom/: jquery-ui.structure.css  jquery-ui.structure.min.css
tool/Atlas/: bundle.js  index.html  main.js  package.json
tool/Atlas/coffee/: Actions.cjsx  App.cjsx  App.coffee  AtlasView.coffee  Editor.cjsx  Menu.cjsx  Node.coffee  UI.coffee
tool/Atlas/coffee/NodeTypes/: Node.cjsx  Node.coffee  TestNode.cjsx
tool/Atlas/coffee/components/: Background.cjsx  Connector.cjsx  Field.cjsx  Input.cjsx  Menu.cjsx  MenuItem.cjsx  Node.cjsx  Output.cjsx  TempConnector.cjsx
tool/Atlas/coffee/containers/: Background.cjsx  Connectors.cjsx  Editor.cjsx  Nodes.cjsx
tool/Atlas/coffee/reducers/: Reducer.cjsx
tool/Atlas/css/: node.css  styles.css
tool/Atlas/js/: Actions.js  Actions.map  App.js  App.js.map  App.map  Editor.js  Editor.map  Menu.js  Menu.map  MenuItem.js  MenuItem.map  NodeManager.js  Reducer.js  Reducer.map  UI.js  UI.js.map  UI.map  background.js
tool/Atlas/js/NodeTypes/: Node.js  Node.js.map  Node.map  TestNode.js  TestNode.js.map  TestNode.map
tool/Atlas/js/components/: Background.map  Connector.js  Connector.map  Field.js  Field.map  Input.js  Input.map  Menu.js  Menu.map  MenuItem.js  MenuItem.map  Node.js  Node.map  NodeMenu.js  Output.js  Output.map  TempConnector.js  TempConnector.map
tool/Atlas/js/containers/: Background.js  Background.map  Code.js  Connectors.js  Connectors.map  Editor.js  (+3 more)
tools/Apollo/: index.html  main.js  package.json
tools/Apollo/css/: node.css  styles.css
tools/Apollo/js/: Test.js  background.js  color.js  node.js
(+11 files in other folders)
